SEO/UX upgrades: meta+OG, JSON-LD, topbar, mobile CTA, favicon, robots.txt, sitemap, security headers

--- a/index.html
+++ b/index.html
@@ -5,14 +5,104 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Somerset Window Cleaning - Professional Window Cleaning Services</title>
     <meta name="description" content="Somerset Window Cleaning provides professional window cleaning services for residential and commercial properties. Reliable, affordable, and fully insured.">
+    <link rel="canonical" href="https://somersetwindowcleaning.co.uk/">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <meta property="og:title" content="Somerset Window Cleaning - Professional Window Cleaning in Somerset">
+    <meta property="og:description" content="Reliable residential and commercial window cleaning. 3,000+ customers across Somerset. Book online today.">
+    <meta property="og:url" content="https://somersetwindowcleaning.co.uk/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Somerset Window Cleaning">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="theme-color" content="#2563eb">
     <link rel="stylesheet" href="styles.css">
     <!-- Core Web Vitals optimization -->
     <link rel="preload" href="styles.css" as="style">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"&lazy>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Somerset Window Cleaning",
+      "url": "https://somersetwindowcleaning.co.uk/",
+      "image": "https://somersetwindowcleaning.co.uk/favicon.svg",
+      "description": "Professional residential and commercial window cleaning across Somerset. 3,000+ regular customers.",
+      "telephone": "+44 1458 860339",
+      "email": "info@somersetwindowcleaning.co.uk",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "13 Rockhaven Business Centre, Gravenchon Way",
+        "addressLocality": "Somerset",
+        "postalCode": "BA16 0HW",
+        "addressCountry": "GB"
+      },
+      "priceRange": "££",
+      "openingHours": [
+        "Mo-Fr 08:00-18:00",
+        "Sa 09:00-13:00"
+      ],
+      "areaServed": ["Somerset"],
+      "sameAs": []
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "How much does window cleaning cost?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Residential window cleaning starts from £15 for a 2-bedroom house. Prices depend on size and frequency."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do I need to be home during cleaning?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "No. For exterior cleaning you don't need to be home. We'll arrange access for interior windows."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How often should windows be cleaned?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We recommend every 4–8 weeks to maintain clarity and prevent damage."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Are you insured?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes. We carry full public liability insurance and our team are trained professionals."
+          }
+        }
+      ]
+    }
+    </script>
 </head>
 <body>
+    <!-- Top contact bar -->
+    <div class="topbar" role="region" aria-label="Contact bar">
+        <div class="container">
+            <div class="topbar-left">
+                <a href="tel:01458860339" aria-label="Call 01458 860339">01458 860339</a>
+                <span class="divider" aria-hidden="true">|</span>
+                <a href="mailto:info@somersetwindowcleaning.co.uk" aria-label="Email info@somersetwindowcleaning.co.uk">info@somersetwindowcleaning.co.uk</a>
+            </div>
+            <div class="topbar-right">
+                <a class="btn-topbar" href="#booking" aria-label="Book online now">Book Online</a>
+            </div>
+        </div>
+    </div>
+
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
@@ -867,6 +957,12 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- Floating mobile CTA -->
+    <div class="floating-cta" aria-label="Quick actions" role="complementary">
+        <a href="tel:01458860339" class="cta-call" aria-label="Call us now">Call</a>
+        <a href="#booking" class="cta-book" aria-label="Book online">Book</a>
+    </div>
+
+    <script src="script.js" defer></script>
 </body>
 </html>
