--- a/services.html
+++ b/services.html
@@ -1,163 +1,182 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Services | Somerset Window Cleaning</title>
-  <meta name="description" content="Window cleaning, gutter clearing, fascia & soffit cleaning, conservatory, and solar panel cleaning across Somerset." />
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-  <link rel="stylesheet" href="/styles.css" />
-</head>
-<body>
-  <div class="topbar">
-    <div class="container">
-      <div class="topbar-left">
-        <a href="tel:01458860339">01458 860339</a>
-        <span class="divider">|</span>
-        <a href="mailto:info@somersetwindowcleaning.co.uk">info@somersetwindowcleaning.co.uk</a>
-      </div>
-      <div class="topbar-right">
-        <a class="btn-topbar" href="/booking.html">Book Online</a>
-      </div>
-    </div>
-  </div>
-
-  <nav class="navbar">
-    <div class="container">
-      <div class="nav-brand"><h1>Somerset Window Cleaning</h1></div>
-      <ul class="nav-menu">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/services.html">Services</a></li>
-        <li><a href="/about.html">About</a></li>
-        <li><a href="/pricing.html">Pricing</a></li>
-        <li><a href="/faq.html">FAQ</a></li>
-        <li><a href="/booking.html">Book Online</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-        <li><a href="/contact.html#quote" class="btn-primary">Get Quote</a></li>
-      </ul>
-      <div class="hamburger"><span></span><span></span><span></span></div>
-    </div>
-  </nav>
-
-  <section class="hero">
-    <div class="container">
-      <div class="hero-content">
-        <h2 class="hero-title">Our Services</h2>
-        <p class="hero-subtitle">Comprehensive exterior cleaning for homes and businesses across Somerset</p>
-        <div class="hero-buttons">
-          <a class="btn-primary" href="/booking.html">Book Online</a>
-          <a class="btn-secondary" href="/pricing.html">Pricing</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Services | Somerset Window Cleaning</title>
+    <meta
+      name="description"
+      content="Window cleaning, gutter clearing, fascia & soffit cleaning, conservatory, and solar panel cleaning across Somerset."
+    />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="/styles.css" />
+  </head>
+  <body>
+    <div class="topbar">
+      <div class="container">
+        <div class="topbar-left">
+          <a href="tel:01458860339">01458 860339</a>
+          <span class="divider">|</span>
+          <a href="mailto:info@somersetwindowcleaning.co.uk">info@somersetwindowcleaning.co.uk</a>
+        </div>
+        <div class="topbar-right">
+          <a class="btn-topbar" href="/booking.html">Book Online</a>
         </div>
       </div>
     </div>
-  </section>
 
-  <section class="services">
-    <div class="container">
-      <h2 class="section-title">What We Do</h2>
-      <p class="section-subtitle">Choose the service you need</p>
-      <div class="services-grid">
-        <div class="service-card">
-          <div class="service-icon">🏠</div>
-          <h3>Residential Window Cleaning</h3>
-          <p>Frames, sills, glass included. Pure water for a spotless finish.</p>
-          <ul>
-            <li>Bungalows to large detached properties</li>
-            <li>4, 8, or 12-week schedules</li>
-            <li>Interior cleans available</li>
-          </ul>
-        </div>
-        <div class="service-card">
-          <div class="service-icon">🏢</div>
-          <h3>Commercial Window Cleaning</h3>
-          <p>Offices, shops, schools and more with minimal disruption.</p>
-          <ul>
-            <li>All access methods</li>
-            <li>RAMS available</li>
-            <li>Scheduled maintenance</li>
-          </ul>
-        </div>
-        <div class="service-card">
-          <div class="service-icon">🪠</div>
-          <h3>Gutter Clearing</h3>
-          <p>Internal clears with vacuums and downpipe checks.</p>
-          <ul>
-            <li>Prevents blockages</li>
-            <li>Improves drainage</li>
-            <li>Annual maintenance</li>
-          </ul>
-        </div>
-        <div class="service-card">
-          <div class="service-icon">🧼</div>
-          <h3>Gutter, Fascia & Soffit Cleaning</h3>
-          <p>External clean to restore appearance and prevent staining.</p>
-          <ul>
-            <li>Soft-wash safe methods</li>
-            <li>Enhances curb appeal</li>
-            <li>Bundle savings</li>
-          </ul>
-        </div>
-        <div class="service-card">
-          <div class="service-icon">☀️</div>
-          <h3>Solar Panel Cleaning</h3>
-          <p>Specialist pure water cleaning to keep output high.</p>
-          <ul>
-            <li>Non-abrasive tools</li>
-            <li>Performance benefit</li>
-            <li>Maintenance plans</li>
-          </ul>
-        </div>
-        <div class="service-card">
-          <div class="service-icon">🏡</div>
-          <h3>Conservatory Roof Cleaning</h3>
-          <p>Full roof and glazing clean for lasting clarity.</p>
-          <ul>
-            <li>Algae and dirt removal</li>
-            <li>Frames and trims</li>
-            <li>Careful, safe access</li>
-          </ul>
-        </div>
+    <nav class="navbar">
+      <div class="container">
+        <div class="nav-brand"><h1>Somerset Window Cleaning</h1></div>
+        <ul class="nav-menu">
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/services.html">Services</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/pricing.html">Pricing</a></li>
+          <li><a href="/faq.html">FAQ</a></li>
+          <li><a href="/booking.html">Book Online</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="/contact.html#quote" class="btn-primary">Get Quote</a></li>
+        </ul>
+        <div class="hamburger"><span></span><span></span><span></span></div>
       </div>
-    </div>
-  </section>
+    </nav>
 
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-content">
-        <div class="footer-brand">
-          <h3>Somerset Window Cleaning</h3>
-          <p>Professional window cleaning services you can trust. Established 2019.</p>
-        </div>
-        <div class="footer-links">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a href="/services.html">Services</a></li>
-            <li><a href="/about.html">About Us</a></li>
-            <li><a href="/pricing.html">Pricing</a></li>
-            <li><a href="/contact.html">Contact</a></li>
-          </ul>
-        </div>
-        <div class="footer-social">
-          <h4>Follow Us</h4>
-          <div class="social-links">
-            <a href="#" aria-label="Facebook">F</a>
-            <a href="#" aria-label="Twitter">T</a>
-            <a href="#" aria-label="Instagram">I</a>
+    <section class="hero">
+      <div class="container">
+        <div class="hero-content">
+          <h2 class="hero-title">Our Services</h2>
+          <p class="hero-subtitle">
+            Comprehensive exterior cleaning for homes and businesses across Somerset
+          </p>
+          <div class="hero-buttons">
+            <a class="btn-primary" href="/booking.html">Book Online</a>
+            <a class="btn-secondary" href="/pricing.html">Pricing</a>
           </div>
         </div>
       </div>
-      <div class="footer-bottom">
-        <p>&copy; 2024 Somerset Window Cleaning. All rights reserved. | VAT: 359 427 172</p>
+    </section>
+
+    <section class="services">
+      <div class="container">
+        <h2 class="section-title">What We Do</h2>
+        <p class="section-subtitle">Choose the service you need</p>
+        <div class="services-grid">
+          <div class="service-card">
+            <div class="service-icon">🏠</div>
+            <h3>Residential Window Cleaning</h3>
+            <p>
+              Complete cleaning of glass, frames and sills using purified water for a spotless,
+              streak‑free finish.
+            </p>
+            <ul>
+              <li>Suitable for bungalows through to large detached homes</li>
+              <li>4, 8 or 12 week visit schedules</li>
+              <li>Interior window cleaning available on request</li>
+            </ul>
+          </div>
+          <div class="service-card">
+            <div class="service-icon">🏢</div>
+            <h3>Commercial Window Cleaning</h3>
+            <p>
+              Tailored programmes for offices, shops, schools and more, delivered with minimal
+              disruption to your operations.
+            </p>
+            <ul>
+              <li>All access methods including reach and wash, ladders or MEWPs</li>
+              <li>Risk assessments and method statements supplied</li>
+              <li>One‑off or contract maintenance</li>
+            </ul>
+          </div>
+          <div class="service-card">
+            <div class="service-icon">🪠</div>
+            <h3>Gutter Clearing</h3>
+            <p>
+              High‑reach vacuum system removes leaves, moss and debris while ensuring downpipes are
+              clear.
+            </p>
+            <ul>
+              <li>Prevents leaks and damp issues</li>
+              <li>Camera inspections available</li>
+              <li>Recommended annually</li>
+            </ul>
+          </div>
+          <div class="service-card">
+            <div class="service-icon">🧼</div>
+            <h3>Gutter, Fascia &amp; Soffit Cleaning</h3>
+            <p>External wash to restore bright, clean uPVC and protect against surface staining.</p>
+            <ul>
+              <li>Soft‑wash techniques safe for all materials</li>
+              <li>Boosts kerb appeal</li>
+              <li>Bundle discounts with gutter clearing</li>
+            </ul>
+          </div>
+          <div class="service-card">
+            <div class="service-icon">☀️</div>
+            <h3>Solar Panel Cleaning</h3>
+            <p>
+              Gentle pure‑water cleaning keeps panels free from grime and performing at maximum
+              efficiency.
+            </p>
+            <ul>
+              <li>Non‑abrasive brushes designed for solar glass</li>
+              <li>Improves energy output</li>
+              <li>Maintenance plans available</li>
+            </ul>
+          </div>
+          <div class="service-card">
+            <div class="service-icon">🏡</div>
+            <h3>Conservatory Roof Cleaning</h3>
+            <p>
+              Thorough clean of roof panels, frames and detailing to remove algae and restore
+              clarity.
+            </p>
+            <ul>
+              <li>Removes algae and dirt build‑up</li>
+              <li>Frames, trims and finials cleaned</li>
+              <li>Safe access with specialist equipment</li>
+            </ul>
+          </div>
+        </div>
       </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-brand">
+            <h3>Somerset Window Cleaning</h3>
+            <p>Professional window cleaning services you can trust. Established 2019.</p>
+          </div>
+          <div class="footer-links">
+            <h4>Quick Links</h4>
+            <ul>
+              <li><a href="/services.html">Services</a></li>
+              <li><a href="/about.html">About Us</a></li>
+              <li><a href="/pricing.html">Pricing</a></li>
+              <li><a href="/contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer-social">
+            <h4>Follow Us</h4>
+            <div class="social-links">
+              <a href="#" aria-label="Facebook">F</a>
+              <a href="#" aria-label="Twitter">T</a>
+              <a href="#" aria-label="Instagram">I</a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2024 Somerset Window Cleaning. All rights reserved. | VAT: 359 427 172</p>
+        </div>
+      </div>
+    </footer>
+
+    <div class="floating-cta" role="complementary">
+      <a href="tel:01458860339" class="cta-call">Call</a>
+      <a href="/booking.html" class="cta-book">Book</a>
     </div>
-  </footer>
 
-  <div class="floating-cta" role="complementary">
-    <a href="tel:01458860339" class="cta-call">Call</a>
-    <a href="/booking.html" class="cta-book">Book</a>
-  </div>
-
-  <script src="/script.js" defer></script>
-</body>
+    <script src="/script.js" defer></script>
+  </body>
 </html>
-
