--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Somerset Window Cleaning">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="theme-color" content="#2563eb">
+    <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="styles.css">
     <!-- Core Web Vitals optimization -->
     <link rel="preload" href="styles.css" as="style">
